// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecordRow matches the snapshot for a badge row 1`] = `
<KeyboardProvider>
  <View
    accessibilityLabel="Lipid profile"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 18,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#DFE9F4",
          "borderRadius": 21,
          "flexShrink": 0,
          "height": 65,
          "justifyContent": "center",
          "width": 65,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={30}
        bbWidth={30}
        fill="none"
        focusable={false}
        height={30}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 30,
              "width": 30,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={30}
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGGroup
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            propList={
              [
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4282019493,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={1.8}
          >
            <RNSVGPath
              d="M9 3h6M10 3v6l-5 9a2 2 0 0 0 1.8 3h10.4a2 2 0 0 0 1.8-3l-5-9V3"
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            />
            <RNSVGPath
              d="M7.5 15h9"
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            />
          </RNSVGGroup>
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      style={
        {
          "flex": 1,
          "flexDirection": "column",
          "minWidth": 0,
        }
      }
    >
      <Text
        maxFontSizeMultiplier={1.3}
        style={
          {
            "color": "#14213D",
            "fontFamily": "Figtree_700Bold",
            "fontSize": 22,
            "fontWeight": "700",
          }
        }
      >
        Lipid profile
      </Text>
      <Text
        maxFontSizeMultiplier={1.3}
        style={
          {
            "color": "#6B7A8C",
            "fontFamily": "Figtree_400Regular",
            "fontSize": 19,
          }
        }
      >
        Pathology lab · 12 Sep
      </Text>
    </View>
    <View
      style={
        {
          "backgroundColor": "#DCEBE6",
          "borderRadius": 15,
          "paddingHorizontal": 15,
          "paddingVertical": 6,
        }
      }
    >
      <Text
        maxFontSizeMultiplier={1.3}
        style={
          {
            "color": "#2F7D6D",
            "fontFamily": "Figtree_700Bold",
            "fontSize": 18,
            "fontWeight": "700",
          }
        }
      >
        Normal
      </Text>
    </View>
  </View>
</KeyboardProvider>
`;

exports[`RecordRow matches the snapshot for a chevron row 1`] = `
<KeyboardProvider>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 18,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#DCEBE6",
          "borderRadius": 21,
          "flexShrink": 0,
          "height": 65,
          "justifyContent": "center",
          "width": 65,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={30}
        bbWidth={30}
        fill="none"
        focusable={false}
        height={30}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 30,
              "width": 30,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={30}
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGGroup
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            propList={
              [
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4281302381,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={1.8}
          >
            <RNSVGPath
              d="M3 12h4l3-8 4 16 3-8h4"
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            />
          </RNSVGGroup>
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      style={
        {
          "flex": 1,
          "flexDirection": "column",
          "minWidth": 0,
        }
      }
    >
      <Text
        maxFontSizeMultiplier={1.3}
        style={
          {
            "color": "#14213D",
            "fontFamily": "Figtree_700Bold",
            "fontSize": 22,
            "fontWeight": "700",
          }
        }
      >
        ECG report
      </Text>
      <Text
        maxFontSizeMultiplier={1.3}
        style={
          {
            "color": "#6B7A8C",
            "fontFamily": "Figtree_400Regular",
            "fontSize": 19,
          }
        }
      >
        Cardiology · 10 Sep
      </Text>
    </View>
  </View>
</KeyboardProvider>
`;
